src/snapshots/fermat__avltree__from_iter.snap
---
source: src/avltree.rs
expression: tree
---
Node(
    Node {
        key: 4,
        value: '4',
        height: 3,
        min_key: 1,
        max_key: 7,
        left: Node(
            Node {
                key: 2,
                value: '2',
                height: 2,
                min_key: 1,
                max_key: 3,
                left: Node(
                    Node {
                        key: 1,
                        value: '1',
                        height: 1,
                        min_key: 1,
                        max_key: 1,
                        left: Empty,
                        right: Empty,
                    },
                ),
                right: Node(
                    Node {
                        key: 3,
                        value: '3',
                        height: 1,
                        min_key: 3,
                        max_key: 3,
                        left: Empty,
                        right: Empty,
                    },
                ),
            },
        ),
        right: Node(
            Node {
                key: 6,
                value: '6',
                height: 2,
                min_key: 5,
                max_key: 7,
                left: Node(
                    Node {
                        key: 5,
                        value: '5',
                        height: 1,
                        min_key: 5,
                        max_key: 5,
                        left: Empty,
                        right: Empty,
                    },
                ),
                right: Node(
                    Node {
                        key: 7,
                        value: '7',
                        height: 1,
                        min_key: 7,
                        max_key: 7,
                        left: Empty,
                        right: Empty,
                    },
                ),
            },
        ),
    },
)
